--- a/css/index.scss
+++ b/css/index.scss
@@ -1,8 +1,9 @@
 *{
     margin:0;padding:0;list-style:none;text-decoration:none;
 }
-body{height: 500vh;}
+body{position: relative;}
 .bg_intro{
+    height: 400vh;
     position: relative;
     .blur{
         width:100%;height:100vh;
@@ -15,8 +16,8 @@ body{height: 500vh;}
         top:0;left:0;
         z-index: 1;
         clip-path: circle(50px at center);
-        transition: all .1s;
         transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+        img{transition: 1s;}
     }
     .svg__circle{
         position: fixed;
@@ -26,7 +27,6 @@ body{height: 500vh;}
         width:100px;height:100px;
         border:1px solid#fff;
         border-radius: 100%;
-        transition: all .1s;
         transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
     }
     .rotate_text{
@@ -37,10 +37,65 @@ body{height: 500vh;}
         animation:rota 10s infinite;
         animation-fill-mode: none;
         animation-timing-function: linear;
-        transition: all .1s;
         transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
     }
     @keyframes rota {
         100%{transform:translate(-50%,-50%) rotate(360deg);}
+    }
+}
+
+.scroll_ani{
+    position: fixed;
+    bottom:30px;
+    left:50%;
+    transform: translateX(-50%);
+    height:36px;width:20px;
+    border: 1px solid#fff;
+    border-radius: 10px;
+    z-index: 999;
+    div{
+        position: fixed;
+        bottom:22px;
+        left:50%;
+        transform: translateX(-50%);
+        height:6px;width:2px;
+        border: 1px solid#fff;
+        border-radius: 10px;
+        animation: move1 1.5s infinite;
+    }
+    @keyframes move1{
+        80%{
+            bottom:8px;
+            animation-timing-function:ease-in
+        }
+        100%{
+            bottom:22px;
+            animation-timing-function:ease-in;
+        }
+    }
+}
+
+.font_dumy{
+    height: 400vh;
+    width:100%;
+    text-align: center;
+    .font1{
+        margin-bottom: 50px;
+        opacity: 0;
+        transition:1s;
+        &.active{opacity: 1;}
+    }
+    .font2{
+        opacity: 0;
+        transition:1s;
+        &.active{opacity: 1;}
+    }
+    .font_wrap{
+        position: fixed;
+        height: auto;
+        top:50%;left:50%;
+        transform: translate(-50%,-50%);
+        width:100%;
+        img{max-width:945px;}
     }
 }
